plugins {
    id 'java'
    id 'application'
    id "net.ltgt.errorprone" version "5.1.0"
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // 主にStringUtils を利用
    implementation 'org.apache.commons:commons-lang3:3.18.0'
    // フォルダ削除
    implementation 'commons-io:commons-io:2.18.0'
    // yml 読み込み
    implementation 'org.yaml:snakeyaml:2.2'
    // jdbc
    runtimeOnly 'org.postgresql:postgresql:42.7.7'
    // JUnit
    testImplementation 'org.junit.jupiter:junit-jupiter:5.12.2'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    // JSpecify (@Nullable) spring boot を使っているプロジェクトは不要
    implementation 'org.jspecify:jspecify:1.0.0'
    // ErrorProne
    errorprone 'com.google.errorprone:error_prone_core:2.48.0'
    errorprone 'com.uber.nullaway:nullaway:0.13.1'
}

application {
    mainClass = 'jp.green_code.spring_jdbc_codegen.Main'
}

jar {
    manifest {
        attributes('Main-Class': application.mainClass)
    }
}

tasks.register('fatJar', Jar) {
    archiveBaseName.set('spring_jdbc_codegen')
    archiveVersion.set('3.1')
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    manifest {
        attributes 'Main-Class': application.mainClass.get()
    }
    from {
        configurations.runtimeClasspath.collect {
            it.isDirectory() ? it : zipTree(it)
        }
    }
    with jar
}

test {
    useJUnitPlatform()
    systemProperty "user.dir", projectDir
    // 入力がDB のためGradle のup-to-date 判定が効かない。常に実行する
    outputs.upToDateWhen { false }
}

// golden 更新用の生成。make golden-update から使う
tasks.register('generateGolden', JavaExec) {
    description = 'golden 更新用に build/golden-actual へ生成する'
    mainClass = 'jp.green_code.spring_jdbc_codegen.Main'
    classpath = sourceSets.main.runtimeClasspath
    args file('src/test/resources/golden/param.yml').absolutePath
    outputs.upToDateWhen { false }
}

// ErrorProne ここから
tasks.withType(JavaCompile).configureEach {
    options.errorprone {
        option("NullAway:AnnotatedPackages", "jp.green_code")
    }
}
tasks.compileJava {
    options.errorprone.error("NullAway")
}
tasks {
    compileTestJava {
        options.errorprone.enabled = false
    }
}
// ErrorProne ここまで
